Instant Address Standard/main/default/objects/Service_Maste_Transaction__c/Service_Maste_Transaction__c.object-meta.xml
<CustomObject>
    <label>Service_Maste_Transaction</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Service_Maste_Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service_Maste_Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>