Instant Address Standard/main/default/objects/Service_Maste_Transaction__c/fields/IsAllCopied__c.field-meta.xml
<CustomField>
    <fullName>IsAllCopied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAllCopied</label>
    <type>Checkbox</type>
</CustomField>