Instant Address Standard/main/default/objects/Service_Maste_Transaction__c/fields/IsAllDownloaded__c.field-meta.xml
<CustomField>
    <fullName>IsAllDownloaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAllDownloaded</label>
    <type>Checkbox</type>
</CustomField>