Instant Address Standard/main/default/objects/Service_Maste_Transaction__c/fields/IsAllUpdated__c.field-meta.xml
<CustomField>
    <fullName>IsAllUpdated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAllUpdated</label>
    <type>Checkbox</type>
</CustomField>