Instant Address Standard/main/default/objects/Service_Maste_Transaction__c/fields/IsAllUploaded__c.field-meta.xml
<CustomField>
    <fullName>IsAllUploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAllUploaded</label>
    <type>Checkbox</type>
</CustomField>