Instant Address Standard/main/default/objects/Service_Maste_Transaction__c/fields/Response_Flag_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Response_Flag_Metrics__c</fullName>
    <label>Response Flag Metrics</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>