Instant Address Standard/main/default/objects/Service_Maste_Transaction__c/fields/Total_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Total_Addresses__c</fullName>
    <label>Total Addresses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>