Instant Address Standard/main/default/objects/Service_Maste_Transaction__c/fields/TransactionId__c.field-meta.xml
<CustomField>
    <fullName>TransactionId__c</fullName>
    <label>TransactionId</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>