Instant Address Standard/main/default/objects/Service_Maste_Transaction__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <label>User Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>